# fastcan

./: .gitignore  .readthedocs.yml  LICENSE  README.md  README.rst  index.json  info.json  meson.build  pixi.toml  pyproject.toml  regressions.json  regressions.xml  rtd-environment.yml  setup.py
.github/: pull_request_template.md
.github/scripts/: gpu_runner.py
.github/workflows/: asv.yml  ci.yml  emscripten.yml  gpu-ci.yml  lint.yml  publish-pypi.yml  python-package.yml  static.yml  test.yml  wheel.yml
asv_benchmarks/: .gitignore  asv.conf.json
asv_benchmarks/benchmarks/: __init__.py  common.py  datasets.py  fastcan.py  hess.py  lazyfastcan.py  narx.py
doc/: conf.py  diagram.puml  environment.yml  index.rst  intuitive.rst  jupyter_lite_config.json  multioutput.rst  narx.rst  ols_and_omp.rst  pruning.rst  redundancy.rst  requirements.txt  unsupervised.rst  user_guide.rst
doc/css/: fastcan.css
doc/templates/: function.rst  module.rst
doc/templates/autosummary/: class.rst  module.rst
examples/: README.rst  plot_affinity.py  plot_fisher.py  plot_forecasting.py  plot_intuitive.py  plot_narx.py  plot_narx_msa.py  plot_narx_multi.py  plot_ols_omp.py  plot_pruning.py  plot_redundancy.py  plot_speed.py
fastcan/: __init__.py  _beam.py  _cancorr_fast.pyi  _cancorr_fast.pyx  _extend.py  _fastcan.py  _lazyfastcan.py  _minibatch.py  _narx.py  _narx_fast.pyx  _refine.py  _ssc.py  _utils.py  meson.build  narx.py  utils.py
fastcan/narx/: __init__.py  _base.py  _feature.py  _narx_fast.pyi  _narx_fast.pyx  _utils.py  meson.build
fastcan/narx/tests/: test_minimize.py  test_narx.py  test_narx_hess.py  test_narx_hessp.py  test_narx_jac.py
fastcan/tests/: test_beam.py  test_fastcan.py  test_init.py  test_lazyfastcan.py  test_utils.py
graphs/branch-main/machine-macos-latest/pandas/python-3.13/scikit-learn/: fastcan.FastCanBenchmark.peakmem_fit.json  fastcan.FastCanBenchmark.peakmem_transform.json  fastcan.FastCanBenchmark.time_fit.json  fastcan.FastCanBenchmark.time_transform.json  fastcan.FastCanBenchmark.track_test_score.json  fastcan.FastCanBenchmark.track_train_score.json  narx.NARXBenchmark.peakmem_fit.json  narx.NARXBenchmark.peakmem_predict.json  narx.NARXBenchmark.time_fit.json  narx.NARXBenchmark.time_predict.json  narx.NARXBenchmark.track_test_score.json  narx.NARXBenchmark.track_train_score.json  summary.json
graphs/branch-main/machine-ubuntu-24.04-arm/pandas/python-3.13/scikit-learn/: fastcan.FastCanBenchmark.peakmem_fit.json  fastcan.FastCanBenchmark.peakmem_transform.json  fastcan.FastCanBenchmark.time_fit.json  fastcan.FastCanBenchmark.time_transform.json  fastcan.FastCanBenchmark.track_test_score.json  fastcan.FastCanBenchmark.track_train_score.json  narx.NARXBenchmark.peakmem_fit.json  narx.NARXBenchmark.peakmem_predict.json  narx.NARXBenchmark.time_fit.json  narx.NARXBenchmark.time_predict.json  narx.NARXBenchmark.track_test_score.json  narx.NARXBenchmark.track_train_score.json  summary.json
graphs/branch-main/machine-ubuntu-latest/pandas/python-3.13/scikit-learn/: fastcan.FastCanBenchmark.peakmem_fit.json  fastcan.FastCanBenchmark.peakmem_transform.json  fastcan.FastCanBenchmark.time_fit.json  fastcan.FastCanBenchmark.time_transform.json  fastcan.FastCanBenchmark.track_test_score.json  fastcan.FastCanBenchmark.track_train_score.json  narx.NARXBenchmark.peakmem_fit.json  narx.NARXBenchmark.peakmem_predict.json  narx.NARXBenchmark.time_fit.json  narx.NARXBenchmark.time_predict.json  narx.NARXBenchmark.track_test_score.json  narx.NARXBenchmark.track_train_score.json  summary.json
graphs/branch-main/machine-windows-latest/pandas/python-3.13/scikit-learn/: fastcan.FastCanBenchmark.peakmem_fit.json  fastcan.FastCanBenchmark.peakmem_transform.json  fastcan.FastCanBenchmark.time_fit.json  fastcan.FastCanBenchmark.time_transform.json  fastcan.FastCanBenchmark.track_test_score.json  fastcan.FastCanBenchmark.track_train_score.json  summary.json  (+6 more)
graphs/summary/: fastcan.FastCanBenchmark.peakmem_fit.json  fastcan.FastCanBenchmark.peakmem_transform.json  fastcan.FastCanBenchmark.time_fit.json  fastcan.FastCanBenchmark.time_transform.json  fastcan.FastCanBenchmark.track_test_score.json  fastcan.FastCanBenchmark.track_train_score.json  narx.NARXBenchmark.peakmem_fit.json  narx.NARXBenchmark.peakmem_predict.json  narx.NARXBenchmark.time_fit.json  narx.NARXBenchmark.time_predict.json  narx.NARXBenchmark.track_test_score.json  narx.NARXBenchmark.track_train_score.json
macos-latest/: b17409b6-conda-py3.13-pandas-scikit-learn.json
results/: benchmarks.json
results/macos-latest/: 69ee1cdb-conda-py3.13-pandas-scikit-learn.json  8a180f61-conda-py3.13-pandas-scikit-learn.json  8b6a1b21-conda-py3.13-pandas-scikit-learn.json  90a5c543-conda-py3.13-pandas-scikit-learn.json  f78f9042-conda-py3.13-pandas-scikit-learn.json  machine.json
results/ubuntu-24.04-arm/: 69ee1cdb-conda-py3.13-pandas-scikit-learn.json  8a180f61-conda-py3.13-pandas-scikit-learn.json  8b6a1b21-conda-py3.13-pandas-scikit-learn.json  90a5c543-conda-py3.13-pandas-scikit-learn.json  f78f9042-conda-py3.13-pandas-scikit-learn.json
results/ubuntu-latest/: 69ee1cdb-conda-py3.13-pandas-scikit-learn.json  8a180f61-conda-py3.13-pandas-scikit-learn.json  8b6a1b21-conda-py3.13-pandas-scikit-learn.json  90a5c543-conda-py3.13-pandas-scikit-learn.json  f78f9042-conda-py3.13-pandas-scikit-learn.json
results/windows-latest/: 69ee1cdb-conda-py3.13-pandas-scikit-learn.json  8a180f61-conda-py3.13-pandas-scikit-learn.json  8b6a1b21-conda-py3.13-pandas-scikit-learn.json  90a5c543-conda-py3.13-pandas-scikit-learn.json  f78f9042-conda-py3.13-pandas-scikit-learn.json
scripts/: rtd_pre_install.sh
tests/: test_beam.py  test_correlation.py  test_extend.py  test_fastcan.py  test_init.py  test_minibatch.py  test_narx.py  test_narx_jac.py  test_ols.py  test_refine.py  test_ssc.py  test_utils.py
ubuntu-24.04-arm/: b17409b6-conda-py3.13-pandas-scikit-learn.json  machine.json
ubuntu-latest/: b17409b6-conda-py3.13-pandas-scikit-learn.json
windows-latest/: b17409b6-conda-py3.13-pandas-scikit-learn.json  machine.json
